# where-to-rio

./: .gitignore  README.md  diagramacao.plantuml
app/: .tool-versions  ReadMe.md  pyproject.toml
app/app_flask/: app.py  config.py  models.py  requirements.txt
app/app_flask/migrations/versions/: e052587c6a4b_initial_migration.py
app/database/: README_BANCO.txt  alembic.ini  app.py  config.py  models.py  requirements.txt  whereto_DB.db
app/database/alembic/: env.py
app/database/alembic/versions/: 75aa8d6f9bc0_create_tables.py
app/src/: main.py  main_screen.py  page_manager.py  request_screen.py  test_trip_guide.py  tourism_preference.py  trip_guide.py  trip_guide_builder.py  trip_guide_py
app/src/chat_gpt/: chat_gpt_ai.py  rio_attraction_ml.py
app/src/database/: README_BANCO.txt  alembic.ini  attraction_types.csv  attractions.csv  config.py  init_db.py  models.py  requirements.txt  sessionmanager.py  whereto_DB.db
app/src/database/alembic/: env.py
app/src/database/alembic/versions/: 0a556974f8a0_criar_tabelas.py  2749e9ccd61a_criar_tabelas.py  4820088bf7ce_create_tables.py  4cc22ef3c587_create_tables.py  56966f6215cd_create_tables.py  7c8c30deb957_create_tables.py  (+5 more)
app/src/manager/: attraction_manager.py  auth_manager.py  itinerary_manager.py  page_manager.py  user_manager.py
app/src/openai_tourism_agent/: attr_types.csv  attractions.csv  chat_gpt_ai.py  info.csv  main.py  rio_attraction_ml.py
app/src/screens/: base_screen.py  home_screen.py  itinerarylist_screen.py  login_screen.py  main_screen.py  register_screen.py  request_screen.py  response_screen.py
app/src/tripguide/: attraction_manager.py  itinerary_manager.py  test_trip_guide.py  tourism_preference.py  trip_guide.py  trip_guide_builder.py  trip_planner.py
app/src/utils/: pages.py  screen_template.py
app/src/utils/auth/: auth_users.py  config.yaml
app/src/utils/forms/: feedback_form.py
app/src/utils/index/: home.py
app/src/utils/maps/: travel_routes.py
