[tool.poetry]
name = "where-to-rio"
version = "0.1.0"
description = ""
authors = ["Igor Soares, Luiz Felipe, Iury Rosal"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
streamlit-authenticator = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
