[tool.poetry]
name = "where-to-rio"
version = "0.1.0"
description = ""
authors = ["Igor Soares, Luiz Felipe, Iury Rosal"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
streamlit-authenticator = "0.4.1"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.5"
openai = "^1.54.3"
tiktoken = "^0.8.0"
faiss-gpu = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
