[tool.poetry]
name = "where-to-rio"
version = "0.1.0"
description = ""
authors = ["Igor Soares, Luiz Felipe, Iury Rosal"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
streamlit-authenticator = "0.4.1"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.5"
openai = "^1.54.3"
tiktoken = "^0.8.0"
faiss-gpu = "^1.7.2"
streamlit-cookies-manager = "^0.2.0"
alembic = "^1.14.0"
asgiref = "^3.8.1"
blinker = "^1.9.0"
click = "^8.1.7"
colorama = "^0.4.6"
distlib = "^0.3.9"
django = "^5.1.3"
filelock = "^3.16.1"
greenlet = "^3.1.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
kiwisolver = "1.4.5"
mako = "^1.3.6"
markupsafe = "^3.0.2"
platformdirs = "^4.3.6"
psycopg2-binary = "^2.9.10"
sqlparse = "^0.5.2"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
werkzeug = "^3.1.3"
sqlalchemy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
